@@ -5,10 +5,10 @@
 @prefix rdfs: 	<http://www.w3.org/2000/01/rdf-schema#> .
 @prefix atom:	<http://lv2plug.in/ns/ext/atom#> .
 
-<http://github.com/blablack/midimsg.lv2/modwheel>
+<http://github.com/blablack/midimsg.lv2/aftertouch>
 	a lv2:Plugin, lv2:UtilityPlugin ;
 	lv2:project <http://github.com/blablack/midimsg.lv2/> ;        
-	doap:name "Midi Modwheel" ;
+	doap:name "Midi AfterTouch (Channel Pressure)" ;
 	doap:license <http://opensource.org/licenses/isc> ;
 	lv2:optionalFeature lv2:hardRTCapable ;
 	lv2:port [
@@ -49,7 +49,7 @@
 		lv2:index 4 ;
 		lv2:symbol "output_cv" ;
 		lv2:name "Output - CV" ;
-		lv2:default 0.5 ;
+		lv2:default 0.0 ;
 		lv2:minimum -1.0 ;
        	lv2:maximum 1.0 ;
 	] , [
@@ -57,7 +57,7 @@
 		lv2:index 5 ;
 		lv2:symbol "output_control" ;
 		lv2:name "Output - Control" ;
-		lv2:default 0.5 ;
+		lv2:default 0.0 ;
 		lv2:minimum -1.0 ;
        	lv2:maximum 1.0 ;
 	].
